Database update scripts can be found under sql/update directory.

Version 1.7.1
- fix for formdefinitions, when process_class not set post action should be 'email'
- fixed loading the JS and CSS files in the admin interface
- added CSS colors for 'File' and 'Select' types in admin interface

Version 1.7.0
- Added possibility to run external processing class, new form field 'Process class'
- Added 'Identifier' attribute to form field, readonly if no permission, this is passed to form array data
- Added option 'object' to post_action (if set as an action, external Process Class will be executed to process form data)
- Some typo issues fixed

Version 1.6.0
- Added 'file' and 'select' attributes
- Added prefixes for validators classes
- Added possibility to use PHPMailer class instead of ezmail

Version 1.5.1
- Added possibility to define (in formmaker.ini) a set of regular expressions responsible for displaying the date in correct format

Version 1.5
- Added validator "only for year" (since now only full date validator was present)
- Added Select2 JS library (which can be used later on when developing Select-list datatype)
- update.sql script renamed into install.sql
- disabled autocomplete for full-date-validated text input
- Added possibility to inject default data from external source
- Validators are now sorted by "Description", ascending
- Added "Custom Regex" validator
- Changed validation message for Regex, so we could have an access to pattern and possibility to set precise error messages (i18n)

Version 1.4.1
- Added possibility to inject external script to check whether user has access to form. 
  Script path can be set by adding 'ExternalScript' variable into 'FormmakerSettings' settings group.

Version 1.4
- Added possibility to set Confirmation page summary text
- Added Cancel button on Edit page
- Top and bottom controlbars set as default in eZ
- Added "Save and exit" button on edit page
- Fixed JS bug on List page when no forms were added