@@ -345,8 +345,7 @@ class formAttributes extends eZPersistentObject
                         $option_object = $attribute->addOption( $label, $option_order );
                         
                         $default_value = (string)$attribute->attribute( 'default_value' );
-                        if ( $key == $default_value &&
-                             $attribute->attribute( 'type_id') == formTypes::RADIO_ID ) 
+                        if ( $key == $default_value && in_array( $attribute->attribute( 'type_id'), array( formTypes::RADIO_ID, formTypes::SELECT_ID ) ) ) 
                         {
                             $default_value_to_set = $option_object->attribute( 'id' );
                         }
